# pets/server/common/api.yml
@@ -225,6 +225,25 @@ paths:
       tags:
         - Pets
       summary: Fetch all pets in the inventory
+      parameters:
+        - name: offset
+          in: query
+          description: Offset for pagination
+          required: false
+          schema:
+            type: integer
+        - name: limit
+          in: query
+          description: Number of records to return
+          required: false
+          schema:
+            type: integer
+        - name: category
+          in: query
+          description: Filter by category
+          schema:
+            type: string
+            example: dog
       responses:
         200:
           description: An array of pets
